plugins {
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

version = '0.1.0'

repositories {
    mavenCentral()
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

application {
    mainClass = 'eu.nevian.speech_to_text_simple_java_client.Main'
}

jar {
    archiveClassifier.set('plain')
    manifest {
        attributes 'Implementation-Version': version
    }
}

// --> ./gradlew shadowJar
shadowJar {
    archiveBaseName.set('speech_to_text_simple_java_client')
    archiveClassifier.set('')
    manifest {
        attributes 'Main-Class': 'eu.nevian.speech_to_text_simple_java_client.Main'
    }
}

dependencies {
    // OkHttp3 is the client used for HTTP requests
    implementation 'com.squareup.okhttp3:okhttp:4.12.0'

    // Tika is used to detect the MIME type of the file passed as argument
    implementation 'org.apache.tika:tika-core:3.2.2'

    // Log library
    implementation 'ch.qos.logback:logback-classic:1.5.25'

    // Commons CLI is used to parse the command line arguments
    implementation 'commons-cli:commons-cli:1.8.0'

    // Jackson is used to parse the JSON response
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.20.2'

    // JUnit 5 is used for unit testing
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.3'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.10.3'

    // Mockito is used to mock objects in unit tests
    testImplementation 'org.mockito:mockito-core:5.12.0'

    // This module contains the 'MockitoExtension' class that integrates Mockito with JUnit 5
    testImplementation 'org.mockito:mockito-junit-jupiter:5.12.0'

}

test {
    useJUnitPlatform()
}
